--- a/mobile/app/src/main/res/layout/activity_main_component.xml
+++ b/mobile/app/src/main/res/layout/activity_main_component.xml
@@ -13,4 +13,15 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         tools:listitem="@android:layout/simple_list_item_2" />
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar"
+        android:progressDrawable="@drawable/circular_progress_bar"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_centerInParent="true" />
+
 </RelativeLayout>
