--- a/mobile/app/src/main/res/menu/menu_main_component.xml
+++ b/mobile/app/src/main/res/menu/menu_main_component.xml
@@ -3,4 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainComponent">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/reload" android:title="Recarregar"
+        android:orderInCategory="100" app:showAsAction="never" />
 </menu>
